{
    "name": "InputManager",
    "maps": [
        {
            "name": "playerSwitch",
            "id": "5cad693a-2a3c-413b-8061-3c7e35bda6bd",
            "actions": [
                {
                    "name": "selectRedPlayer",
                    "type": "Button",
                    "id": "6383466e-0258-40f2-9ea8-70b8eef577f3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "selectGreenPlayer",
                    "type": "Button",
                    "id": "918b5f72-1943-4412-becb-15b7d5fdbacd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "selectBluePlayer",
                    "type": "Button",
                    "id": "39ede9a3-fdd0-4b01-b2ee-971f36d63ef1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "cfedc12a-42f5-47ea-994e-72dc2366a862",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "selectRedPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0bd460dc-f289-4b7f-a79e-d0042a100d64",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "selectRedPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2bd4fe0-919c-4370-8ce5-60e22d768507",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "selectGreenPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6ee86c7-470c-4fd2-bb86-986a1e115543",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "selectGreenPlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6807ad0e-e2bb-49fb-94d3-40fb90019f99",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "selectBluePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e78d0700-ea47-452f-8d72-2af82967190a",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "selectBluePlayer",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "player",
            "id": "93330eb2-5d57-4967-9871-7844f5b362dd",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "e61051d2-d65d-40ca-bdb0-379a661797b3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "63941eba-a197-4e8c-8362-2749fa9d1641",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "AD",
                    "id": "54964fe9-ba1e-47e3-9f27-898fc4eacd47",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "4309645e-5037-4c70-ab8e-16a21c1e3229",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "63f069b5-c10c-4753-9850-30d127698925",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "LeftRight",
                    "id": "eca21330-7b30-4686-be20-1e27db30c99b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7f8ded5a-71f9-4492-b310-6e5301896e9d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "83f2c53a-f5a3-482a-8eb6-27ca5f27c7a7",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bb7c57e5-89d5-4198-bfc4-2b93022295a8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "70b2a090-49b8-4068-b0e9-5df6d8b07ad0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Kb & M",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Kb & M",
            "bindingGroup": "Kb & M",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}